SSKW-104 Fixed template form styles to avoid overlapping.

--- a/src/client/components/organisms/TemplateForm/TemplateForm.scss
+++ b/src/client/components/organisms/TemplateForm/TemplateForm.scss
@@ -2,6 +2,8 @@
   padding: 0 getSpacing(2);
   display: flex;
   flex-direction: column;
+  max-height: 60vh;
+  overflow: auto;
 
   &__principals {
     display: flex;
